table is updated

--- a/experiments.tex
+++ b/experiments.tex
@@ -28,20 +28,20 @@ We consider two distinct types of problems, and demonstrate how they can be solv
 			Case-studies&\multicolumn{1}{c}{Global planning}&
 			\multicolumn{3}{|c}{Local ABCD}&\multicolumn{3}{|c}{Global ABCD}\\
 			
-			&$T_{AL}$&$N_l$&$T_{l}^{abs}$&$T_{l}^{syn}$&$T_g^{abs}$&$T_g^{syn}$&$N_g$\\
+			&$T_{AL}$&$N_l$&$T_{l}^{abs}$&$T_{l}^{syn}$&$N_g$&$T_g^{abs}$&$T_g^{syn}$\\
 			\midrule
 			
-			\multirow{1}{*}{\rotatebox{0}{Multi-drone path planning}} & $125$ & $4\times 10^5$ & $91.0$  & $9.22$& $7.14\times 10^{70}$&OM&OM \\
-			
-			\midrule
-			
-			\multirow{1}{*}{\rotatebox{0}{Crane and forklift}} & $0.65$ & $1.2\times 10^7$&$511$  & $91$&$2.16\times10^{18}$&OM&OM\\
+			\multirow{1}{*}{\rotatebox{0}{Multi-drone path planning}} & $125$ & $1.15\times 10^8$ & $134.33$  & $10.66$& $2.73\times 10^{104}$&OMM&OMM \\
 			
 			\midrule
 			
-			\multirow{1}{*}{\rotatebox{0}{Lane merging}} & $100$ & $45.37$  & $8.63$&OM&OM\\
+			\multirow{1}{*}{\rotatebox{0}{Crane and forklift}} & $0.65$ & $7.32\times 10^8$&$511$  & $91$&$2.16\times10^{18}$&OMM&OMM\\
+			
 			\midrule
-			\multirow{1}{*}{\rotatebox{0}{Multi-drone formation control}} & $163$ & $128.41$  & $34.14$&OM&OM\\
+			
+			\multirow{1}{*}{\rotatebox{0}{Lane merging}} & $100$ & $1.01\times 10^8$&$45.37$  & $8.63$&$3.84\times 10^{85}$&OMM&OMM\\
+			\midrule
+			\multirow{1}{*}{\rotatebox{0}{Multi-drone formation control}} & $163$ & $4.02\times 10^8$&$128.41$  & $34.14$&$3.7\times 10^{59}$&OMM&OMM\\
 			\bottomrule
 	\end{tabular}}
 \end{table*}
