--- a/experiments.tex
+++ b/experiments.tex
@@ -35,7 +35,7 @@ We consider two distinct types of problems, and demonstrate how they can be solv
 			
 			\midrule
 			
-			\multirow{1}{*}{\rotatebox{0}{Crane and forklift}} & $0.65$ & $1.81\times 10^11$&$511$  & $91$&$2.16\times10^{18}$&OOM&OOM\\
+			\multirow{1}{*}{\rotatebox{0}{Crane and forklift}} & $0.65$ & $1.81\times 10^{11}$&$511$  & $91$&$2.16\times10^{18}$&OOM&OOM\\
 			
 			\midrule
 			
